tests/negative/reexport_private/impl.sans
pub add(a:I b:I) I = a + b
helper() I = 42
